--- a/src/app/body/task/task.component.html
+++ b/src/app/body/task/task.component.html
@@ -1,3 +1,4 @@
+<div class="example-box" cdkDrag>
 <div class="todo-section">
   <mat-card class="example-card">
 
@@ -33,4 +34,5 @@
       <span class="m-auto px-2 priority">{{ task.priority }}</span>
     </div>
   </mat-card>
+</div>
 </div>
