Task component will render in only todo section

--- a/src/app/body/completed/completed.component.html
+++ b/src/app/body/completed/completed.component.html
@@ -3,6 +3,6 @@
       <mat-card-header>
         <h2 class="section-title">Completed</h2>
       </mat-card-header>
-      <app-task></app-task>
+      <!--app-task></app-task-->
     </mat-card>
   </div>
