--- a/src/app/body/inprogress/inprogress.component.html
+++ b/src/app/body/inprogress/inprogress.component.html
@@ -3,6 +3,6 @@
     <mat-card-header>
       <h2 class="section-title">InProgress</h2>
     </mat-card-header>
-    <app-task></app-task>
+    <!--app-task></app-task-->
   </mat-card>
 </div>
