Delete and Edit functionality added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
     </button>
   </mat-toolbar>
 </p>
+<!--main>
+  <router-outlet></router-outlet>
+</main-->
 
 <app-task-create></app-task-create>
 <app-body></app-body>
